AuthController, UserController e RouteController corrigidos